// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home renders correctly with posts and archive 1`] = `
Array [
  <div
    className="post-teaser"
  >
    <h2>
      <a
        href="/posts/[id]"
      >
        かきくけこ
      </a>
    </h2>
    <div>
      <span>
        2020/08/27
      </span>
    </div>
  </div>,
  <div
    className="post-teaser"
  >
    <h2>
      <a
        href="/posts/[id]"
      >
        あいうえお
      </a>
    </h2>
    <div>
      <span>
        2018/05/27
      </span>
    </div>
  </div>,
  <div
    className="home-archive"
  >
    <a
      href="/archive/[page]"
    >
      アーカイブ
    </a>
  </div>,
  <style
    jsx={true}
  >
    
        .post-teaser {
          margin-bottom: 2em;
        }

        .post-teaser h2 a {
          text-decoration: none;
        }

        .home-archive {
          margin: 3em;
          display: flex;
          flex-direction: row;
          justify-content: center;
        }
      
  </style>,
]
`;

exports[`Home renders correctly without posts nor archive 1`] = `
Array [
  "",
  <style
    jsx={true}
  >
    
        .post-teaser {
          margin-bottom: 2em;
        }

        .post-teaser h2 a {
          text-decoration: none;
        }

        .home-archive {
          margin: 3em;
          display: flex;
          flex-direction: row;
          justify-content: center;
        }
      
  </style>,
]
`;
